--- a/FileOptimizer/Languages/19.po
+++ b/FileOptimizer/Languages/19.po
@@ -429,7 +429,7 @@ msgid "Shutdown computer when optimization completes."
 msgstr "Computer afsluiten als optimalisatie klaar is."
 
 msgid "&Beep when done"
-msgstr "&Biep waneer klaar"
+msgstr "&Biep wanneer klaar"
 
 msgid "Beep the speaker when optimization completes."
 msgstr "Luidspreker laten biepen als optimalisatie klaar is."
@@ -616,6 +616,19 @@ msgstr ""
 msgid "Support"
 msgstr "Ondersteuning"
 
+msgid ""
+"Do you want to contribute FileOptimizer\n"
+"development by showing ads while it is in use?\n"
+"\n"
+"This will encourage its future maintenance and\n"
+"upgrades, being highly appreciated."
+msgtr ""
+"Wilt u bijdragen aan de ontwikkeling van FileOptimizer\n"
+"door advertenties te tonen tijdens het gebruik?\n"
+"\n"
+"Dit zal de verdere ontwikkeling en updates aanmoedigen \n"
+"en wordt ten zeerste gewaardeerd.\n"
+
 msgid "0 / 1 files - FileOptimizer"
 msgstr "0 / 1 bestanden - FileOptimizer"
 
@@ -688,67 +701,6 @@ msgstr "%s bestanden verwerkt, %s bytes bespaard (%s%%)"
 
 msgid "About"
 msgstr "Over"
-
-msgid ""
-"Except where otherwise noted, all of the documentation and software \r\n"
-"included in the package is copyrighted by Javier Gutiérrez Chamorro (Guti).\r\n"
-"\r\n"
-"Copyright © 2012- Javier Gutiérrez Chamorro (Guti). All rights reserved.\r\n"
-"\r\n"
-"This software is provided \"as-is,\" without any express or implied warranty. In \r\n"
-"no event shall the author be held liable for any damages arising from the use \r\n"
-"of this software.\r\n"
-"\r\n"
-"Permission is granted to anyone to use this software for any purpose, \r\n"
-"including commercial applications, and to alter and redistribute it, provided that \r\n"
-"the following conditions are met:\r\n"
-"\r\n"
-"1. All redistributions of source code files must retain all copyright notices that \r\n"
-"are currently in place, and this list of conditions without modification.\r\n"
-"\r\n"
-"2. All redistributions in binary form must retain all occurrences of the above \r\n"
-"copyright notice and web site addresses that are currently in place (for \r\n"
-"example, in the About boxes).\r\n"
-"\r\n"
-"3. The origin of this software must not be misrepresented; you must not claim \r\n"
-"that you wrote the original software. If you use this software to distribute a \r\n"
-"product, an acknowledgment in the product documentation would be \r\n"
-"appreciated but is not required.\r\n"
-"\r\n"
-"4. Modified versions in source or binary form must be plainly marked as such, \r\n"
-"and must not be misrepresented as being the original software.\r\n"
-"\r\n"
-"Includes icons by icons8.com.\r\n"
-msgstr ""
-"Behalve waar anders beschreven, is alle documentatie en software \r\n"
-"inbegrepen in het pakket copyright van Javier Gutiérrez Chamorro (Guti).\r\n"
-"\r\n"
-"Copyright © 2012- Javier Gutiérrez Chamorro (Guti). Alle rechten voorbehouden.\r\n"
-"\r\n"
-"Deze software wordt geleverd \"as-is,\" zonder enige ex- of impliciete waarborg. In \r\n"
-"geen enkel geval zal de auteur aansprakelijk gesteld kunnen worden voor schade \r\n"
-"voorkomend van het gebruik van deze software.\r\n"
-"\r\n"
-"Toelating wordt gegeven aan iedereen om deze software te gebruiken voor eender welk doel, \r\n"
-"inbegrepen commerciële toepassingen, en om hem te veranderen en verder te distributeren, \r\n"
-"op voorwaarde dat volgende condities worden nageleefd:\r\n"
-"\r\n"
-"1. Alle wederdistributies van broncodebestanden moeten alle auteursrechtenvermeldingen \r\n"
-"behouden die aanwezig zijn en deze lijst met voorwaarden zonder aanpassing.\r\n"
-"\r\n"
-"2. Alle wederdistributies in binaire vorm moeten alle vermeldingen behouden van \r\n"
-"de bovenvermelde auteursrechtenvermelding en website adressen die nu aanwezig zijn \r\n"
-"(bv. in de Over vensters).\r\n"
-"\r\n"
-"3. De oorsprong van deze software mag niet foutief voorgesteld worden; u mag niet \r\n"
-"beweren dat u de originele software schreef. Als u deze software gebruikt om een product \r\n"
-"te distributeren, wordt een erkenning in de documentatie van het product op prijs \r\n"
-"gesteld maar is niet noodzakelijk.\r\n"
-"\r\n"
-"4. Aangepaste versies in broncode of binaire vorm moeten duidelijk als zodanig \r\n"
-"gekenmerkt worden en mogen niet als de originele software voorgesteld worden.\r\n"
-"\r\n"
-"Inbegrepen iconen by icons8.com.\r\n"
 
 msgid "&Close"
 msgstr "&Sluiten"
