Fixed access violations on some circunstances (Ramon E)
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1212 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -166,6 +166,7 @@ X.XX - YYYY
 - Made installer multilanguage.
 - Implemented Some translation improvements (Luc).
 - Fixed a regression in 12.30 which caused registry values not being properly read (srobert698).
+- Fixed access violations on some circunstances (Ramon E).
 
 
 12.30 - 2018/02/06
