--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -167,6 +167,7 @@ X.XX - YYYY
 - Implemented Some translation improvements (Luc).
 - Fixed a regression in 12.30 which caused registry values not being properly read (srobert698).
 - Fixed access violations on some circunstances (Ramon E).
+- Some minor optimizations and code cleanup.
 
 
 12.30 - 2018/02/06
