--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -1,7 +1,3 @@
-DONATOR INFORMATION and USAGE STATISTICS are not translated (Luc).
-
-https://sourceforge.net/p/nikkhokkho/tickets/27/
-
 - Move PNG plugins that are expensive in time, to execute only in level 7 or higher.
 
 - Would it be possible for you to add a command line flag to hide the window and just return a 0 or 1 whether the provided file(s) have completed the operations? (Devedse)
@@ -112,7 +108,7 @@ ndo
 
 
 
-- AdvanceCOMP 2.00 - https://github.com/amadvance/advancecomp
+- AdvanceCOMP 2.10 - https://github.com/amadvance/advancecomp
 - APNG Optimizer 1.4 - http://sourceforge.net/projects/apng/
 - Coherent PDF Command Line Tools (cpdf) 2.2 Patchlevel 1 - http://community.coherentpdf.com
 - CSSTidy 1.3 - http://csstidy.sourceforge.net/download.php
@@ -162,11 +158,15 @@ ndo
 
 
 X.XX - YYYY
-- Included dutch translation. Thanks Luc.
+- Added dutch translation. Thanks Luc.
 - Made installer multilanguage.
-- Implemented Some translation improvements (Luc).
+- Made all internal file operations use short names if available to avoid long path errors (#32 Ramon E).
+- Implemented some translation improvements (Luc).
+- Improved Google File Stream and Microsoft OneDrive compatibility.
 - Fixed a regression in 12.30 which caused registry values not being properly read (srobert698).
-- Fixed access violations on some circunstances (Ramon E).
+- Fixed an access violations on some circunstances (Ramon E).
+- Fixed some strings not being translated due to line breaks (Luc).
+- Updated AdvanceCOMP to 2.10.
 - Some minor optimizations and code cleanup.
 
 
