Added german translation. Thanks Oliver
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1217 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -161,6 +161,7 @@ ndo
 
 X.XX - YYYY
 - Added dutch translation. Thanks Luc.
+- Added german translation. Thanks Oliver.
 - Made installer multilanguage.
 - Made all internal file operations use short names if available to avoid long path errors (#32 Ramon E).
 - Implemented some translation improvements (Luc).
