- Made ads load smoother. - Updated pingo to 0.95u x86 and x64 versions.
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1224 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -143,7 +143,7 @@ ndo
 - mutool 1.12 - http://mupdf.com/downloads/
 - OptiPNG 0.7.7 - http://optipng.sourceforge.net
 - PETrim 4.00 beta - http://pecompact.com/pesuite.php
-- pingo 0.95t - http://css-ig.net/pingo
+- pingo 0.95u - http://css-ig.net/pingo
 - PngOptimizer 2.5 - http://psydk.org/PngOptimizer
 - PNGOUT 02/13/2015 - http://advsys.net/ken/utils.htm
 - pngquant 2.11.7 - http://www.pngquant.org
@@ -163,8 +163,9 @@ X.XX - YYYY
 - Added full licensing files to all plugins to avoid any confusion.
 - Made About and Option windows resizable.
 - Updated pngquant to 2.11.7.
+- Made ads load smoother.
+- Updated pingo to 0.95u x86 and x64 versions.
 - Updated ImageMagick to 7.0.7.23 with HDRI support.
-- Updated pingo to 0.95t x86 and x64 versions.
 
 
 12.40 - 2018/02/19
