Fix some warnings
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1225 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -166,6 +166,7 @@ X.XX - YYYY
 - Made ads load smoother.
 - Updated pingo to 0.95u x86 and x64 versions.
 - Updated ImageMagick to 7.0.7.23 with HDRI support.
+- Some minor optimizations and code cleanup.
 
 
 12.40 - 2018/02/19
