Retested in Windows XP SP3
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1228 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -165,6 +165,7 @@ X.XX - YYYY
 - Made About and Option windows resizable.
 - Updated pngquant to 2.11.7.
 - Made ads load smoother.
+- Retested in Windows XP SP3.
 - Updated pingo to 0.95u x86 and x64 versions.
 - Updated ImageMagick to 7.0.7.23 with HDRI support.
 - Some minor optimizations and code cleanup.
