--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -163,9 +163,10 @@ X.XX - YYYY
 - Switched to AGPL license to protect it from modifications in network environments and making it compatible with Ghostcript (Robin Watts #33).
 - Added full licensing files to all plugins to avoid any confusion.
 - Made About and Option windows resizable.
-- Updated pngquant to 2.11.7.
 - Made ads load smoother.
+- Fixed access violations on some configurations due to -x-orc=2 IDE fixpack introduced in 12.30 (a902cd23).
 - Retested in Windows XP SP3.
+- Updated pngquant to 2.11.7.
 - Updated pingo to 0.95u x86 and x64 versions.
 - Updated ImageMagick to 7.0.7.23 with HDRI support.
 - Some minor optimizations and code cleanup.
