--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -1,5 +1,3 @@
-Check access violation in Windows 7. Started in 12.30. 12.20 was OK.
-
 - Move PNG plugins that are expensive in time, to execute only in level 7 or higher.
 
 - Would it be possible for you to add a command line flag to hide the window and just return a 0 or 1 whether the provided file(s) have completed the operations? (Devedse)
@@ -144,7 +142,7 @@ ndo
 - mutool 1.12 - http://mupdf.com/downloads/
 - OptiPNG 0.7.7 - http://optipng.sourceforge.net
 - PETrim 4.00 beta - http://pecompact.com/pesuite.php
-- pingo 0.95u - http://css-ig.net/pingo
+- pingo 0.95w - http://css-ig.net/pingo
 - PngOptimizer 2.5 - http://psydk.org/PngOptimizer
 - PNGOUT 02/13/2015 - http://advsys.net/ken/utils.htm
 - pngquant 2.11.7 - http://www.pngquant.org
@@ -164,10 +162,9 @@ X.XX - YYYY
 - Added full licensing files to all plugins to avoid any confusion.
 - Made About and Option windows resizable.
 - Made ads load smoother.
-- Fixed access violations on some configurations due to -x-orc=2 IDE fixpack introduced in 12.30 (a902cd23).
 - Retested in Windows XP SP3.
 - Updated pngquant to 2.11.7.
-- Updated pingo to 0.95u x86 and x64 versions.
+- Updated pingo to 0.95w x86 and x64 versions.
 - Updated ImageMagick to 7.0.7.23 with HDRI support.
 - Some minor optimizations and code cleanup.
 
