--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -158,6 +158,9 @@ ndo
 
 
 X.XX - YYYY
+- Added per pluggin progress (RejZoR).
+
+12.50 - 2018/02/27
 - Switched to AGPL license to protect it from modifications in network environments and making it compatible with Ghostcript (Robin Watts #33).
 - Added full licensing files to all plugins to avoid any confusion.
 - Made About and Option windows resizable.
@@ -167,7 +170,6 @@ X.XX - YYYY
 - Updated pingo to 0.95w x86 and x64 versions.
 - Updated ImageMagick to 7.0.7.23 with HDRI support.
 - Some minor optimizations and code cleanup.
-
 
 12.40 - 2018/02/19
 - Added dutch translation. Thanks Luc.
