Disabled ImageMagick on TIFF images when copy metadata because it is not kept (Dominik RUTSCHMANN)
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1234 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Languages/25.po
+++ b/FileOptimizer/Languages/25.po
@@ -1,4 +1,4 @@
-uage ID: 25 (0x19)"
+# "Language ID: 25 (0x19)"
 # "Language Name: Russian"
 # "Project-Id-Version: FileOptimizer 12.50.2231"
 # "POT-Creation-Date: Feb 28 2018"
