--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -116,7 +116,7 @@ ndo
 - defluff 0.3.2 - http://j-o.users.sourceforge.net
 - Document Press Version 6.01 - http://encode.ru/threads/336-Document-Press-6-01
 - ECT 0.8.2 (50e32cde31e6) - https://github.com/fhanau/Efficient-Compression-Tool
-- ffmpeg 3.4.1 - http://ffmpeg.zeranoe.com/builds/
+- ffmpeg 3.4.2 - http://ffmpeg.zeranoe.com/builds/
 - FLAC 1.3.2 - https://xiph.org/flac/
 - FLACOUT 07/03/2014 - http://advsys.net/ken/utils.htm
 - Flasm 1.62 - http://flasm.sourceforge.net
@@ -125,7 +125,7 @@ ndo
 - Ghostscript 9.22 - http://www.ghostscript.com
 - GNU Strip 2.29.1 - https://sourceforge.net/projects/mingw-w64/
 - Guetzli 1.0.1 - https://github.com/google/guetzli
-- ImageMagick 7.0.7.23 - http://www.imagemagick.org
+- ImageMagick 7.0.7.25 - http://www.imagemagick.org
 - ImageWorsener 1.3.2 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
@@ -163,7 +163,9 @@ X.XX - YYYY
 - Added per pluggin progress (RejZoR).
 - Disabled ImageMagick on TIFF images when copy metadata because it is not kept (Dominik RUTSCHMANN).
 - Disabled pngquant on APNG images when lossy compression was selected because it broke animations (Shazy).
+- Updated ffmpeg to 3.4.2.
 - Updated pingo to 0.96f x86 and x64 versions.
+- Updated ImageMagick to 7.0.7.25 with HDRI support.
 - Some minor optimizations and code cleanup.
 - Upgraded distributions to 7-Zip 18.02.
 
