--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -158,6 +158,8 @@ ndo
 
 
 X.XX - YYYY
+
+12.60 - 2018/03/15
 - Added russian translation. Thanks Max.
 - Added swedish translation. Thanks a902cd23.
 - Added per pluggin progress (RejZoR).
@@ -167,6 +169,7 @@ X.XX - YYYY
 - Updated pingo to 0.96f x86 and x64 versions.
 - Updated ImageMagick to 7.0.7.25 with HDRI support.
 - Some minor optimizations and code cleanup.
+- Compiled with latest C++ Builder 10.2.3 (Tokyo Update 3).
 - Updated EXE compatibility to PatchPE 1.30.
 - Upgraded distributions to 7-Zip 18.02.
 
