--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -170,6 +170,7 @@ X.XX - YYYY
 - Updated ffmpeg to 3.4.2.
 - Updated pingo to 0.96o x86 and x64 versions.
 - Updated ImageMagick to 7.0.7.25 with HDRI support.
+- Statically analized with C++ Builder Audits.
 - Some minor optimizations and code cleanup.
 - Updated EXE compatibility to PatchPE 1.30.
 - Upgraded distributions to 7-Zip 18.02.
