--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -134,7 +134,7 @@ ndo
 - jpegoptim 1.4.4 git-9578d79 - http://www.kokkonen.net/tjko/projects.html
 - jpegtran 9 - http://jpegclub.org/jpegtran/
 - jsmin 2013-03-29 - http://www.crockford.com/javascript/jsmin.html
-- Leanify 0.4.3.209 - https://github.com/JayXon/Leanify (https://ci.appveyor.com/project/JayXon/leanify)
+- Leanify 0.4.3.210 - https://github.com/JayXon/Leanify (https://ci.appveyor.com/project/JayXon/leanify)
 - libwebp 0.6.1 - https://storage.googleapis.com/downloads.webmproject.org/releases/webp/index.html
 - m7zRepacker 1.0.32.319 - https://encode.ru/threads/1201-m7zRepacker
 - mkclean 0.8.10 - http://www.matroska.org/downloads/mkclean.html
@@ -170,6 +170,7 @@ X.XX - YYYY
 - Updated ffmpeg to 3.4.2.
 - Updated pingo to 0.96o x86 and x64 versions.
 - Updated ImageMagick to 7.0.7.25 with HDRI support.
+- Updated Leanify to 0.4.3.210 daily binaries.
 - Statically analized with C++ Builder Audits.
 - Some minor optimizations and code cleanup.
 - Updated EXE compatibility to PatchPE 1.30.
