- Some minor optimizations and code cleanup. - Upgraded distributions to 7-Zip 18.03.
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1256 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -161,6 +161,8 @@ ndo
 
 X.XX - YYYY
 - Updated Ghostscript to 9.23.
+- Some minor optimizations and code cleanup.
+- Upgraded distributions to 7-Zip 18.03.
 
 
 12.60 - 2018/03/21
