--- a/FileOptimizer/Source/jpegoptim/README
+++ b/FileOptimizer/Source/jpegoptim/README
@@ -1,5 +1,5 @@
 
-Jpegoptim v1.4.4 - Copyright (c)  Timo Kokkonen, 1996-2016. All Rights Reserved.
+Jpegoptim v1.4.5 - Copyright (C)  Timo Kokkonen, 1996-2018. All Rights Reserved.
 
 
 REQUIREMENTS
@@ -19,8 +19,8 @@ INSTALLATION
 	tar file, make necessary changes to the Makefile,  and then 
         compile the program. You may wanna do something like this:
 
-		zcat jpegoptim-1.4.4.tar.gz | tar xf -
-		cd jpegoptim-1.4.4
+		zcat jpegoptim-1.4.5.tar.gz | tar xf -
+		cd jpegoptim-1.4.5
 		./configure
 		make
 		make strip
@@ -28,6 +28,10 @@ INSTALLATION
 
 
 HISTORY
+	v1.4.5 - fix --overwrite option,
+                 better error reporting for -d option,
+                 fix memcmp() potentially reading past end of buffer,
+                 some minor fixes
 	v1.4.4 - more detailed error messages (thanks to Denis Fateyev),
                  CMake support (thanks to Ghostkeeper),
                  other minor fixes
@@ -92,5 +96,5 @@ LATEST VERSION
 
 
 Timo <tjko@iki.fi>
-15-Aug-2016  $Id: 210adea95505d893083a1a99178a5c9677bc8281 $
+30-Mar-2018  $Id: 0047596655aed6d4e6cb2095d5ce9d888430ce88 $
 
