--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -133,7 +133,7 @@ ndo
 - ImageWorsener 1.3.2 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
-- jpegoptim 1.4.4 git-9578d79 - http://www.kokkonen.net/tjko/projects.html
+- jpegoptim 1.4.5 - http://www.kokkonen.net/tjko/projects.html
 - jpegtran 9 - http://jpegclub.org/jpegtran/
 - jsmin 2013-03-29 - http://www.crockford.com/javascript/jsmin.html
 - Leanify 0.4.3.210 - https://github.com/JayXon/Leanify (https://ci.appveyor.com/project/JayXon/leanify)
@@ -162,6 +162,7 @@ ndo
 
 
 X.XX - YYYY
+- Updated jpegoptim to 1.4.5 (custom built with libjpeg 9b).
 
 
 12.61 - 2018/04/01
