Remove redundant GetShortName
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1269 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -163,6 +163,7 @@ ndo
 
 X.XX - YYYY
 - Updated jpegoptim to 1.4.5 (custom built with libjpeg 9b).
+- Some minor optimizations and code cleanup.
 
 
 12.61 - 2018/04/01
