Updated to cppcheck 1.83
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@1272 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -166,6 +166,7 @@ ndo
 X.XX - YYYY
 - Updated jpegoptim to 1.4.5 (custom built with libjpeg 9b).
 - Updated SQLite to 3.23.0 x86 and x64 Visual C++ 2017 custom builds.
+- Updated to cppcheck 1.83.
 - Some minor optimizations and code cleanup.
 
 
