--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -148,7 +148,7 @@ ndo
 - mutool 1.12 - http://mupdf.com/downloads/
 - OptiPNG 0.7.7 - http://optipng.sourceforge.net
 - PETrim 4.00 beta - http://pecompact.com/pesuite.php
-- pingo 0.96w - http://css-ig.net/pingo
+- pingo 0.96y - http://css-ig.net/pingo
 - PngOptimizer 2.5 - http://psydk.org/PngOptimizer
 - PNGOUT 02/13/2015 - http://advsys.net/ken/utils.htm
 - pngquant 2.11.7 - http://www.pngquant.org
@@ -166,6 +166,7 @@ ndo
 X.XX - YYYY
 - Updated jpegoptim to 1.4.5 (custom built with libjpeg 9b).
 - Updated SQLite to 3.23.0 x86 and x64 Visual C++ 2017 custom builds.
+- Updated pingo to 0.96y x86 and x64 versions.
 - Updated to cppcheck 1.83.
 - Some minor optimizations and code cleanup.
 
