--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -1,5 +1,3 @@
-- Add Libdeflate - https://github.com/ebiggers/libdeflate/releases (JoeW).
-
 - Lang path (Manuel).
 
 - Crash en Release x86
@@ -139,6 +137,7 @@ ndo
 - jpegtran 9 - http://jpegclub.org/jpegtran/
 - jsmin 2013-03-29 - http://www.crockford.com/javascript/jsmin.html
 - Leanify 0.4.3.210 - https://github.com/JayXon/Leanify (https://ci.appveyor.com/project/JayXon/leanify)
+- libdeflate 0.8 - https://github.com/ebiggers/libdeflate
 - libwebp 0.6.1 - https://storage.googleapis.com/downloads.webmproject.org/releases/webp/index.html
 - m7zRepacker 1.0.32.319 - https://encode.ru/threads/1201-m7zRepacker
 - mkclean 0.8.10 - http://www.matroska.org/downloads/mkclean.html
@@ -164,6 +163,7 @@ ndo
 
 
 X.XX - YYYY
+- Added Libdeflate for GZ toolchain (JoeW).
 - Updated jpegoptim to 1.4.5 (custom built with libjpeg 9b).
 - Updated SQLite to 3.23.0 x86 and x64 Visual C++ 2017 custom builds.
 - Updated pingo to 0.96y x86 and x64 versions.
