--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -129,7 +129,7 @@ ndo
 - Ghostscript 9.23 - http://www.ghostscript.com
 - GNU Strip 2.29.1 - https://sourceforge.net/projects/mingw-w64/
 - Guetzli 1.0.1 - https://github.com/google/guetzli
-- ImageMagick 7.0.7.25 - http://www.imagemagick.org
+- ImageMagick 7.0.7.28 - http://www.imagemagick.org
 - ImageWorsener 1.3.2 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
@@ -167,6 +167,7 @@ X.XX - YYYY
 - Updated jpegoptim to 1.4.5 (custom built with libjpeg 9b).
 - Updated SQLite to 3.23.0 x86 and x64 Visual C++ 2017 custom builds.
 - Updated pingo to 0.96y x86 and x64 versions.
+- Updated ImageMagick to 7.0.7.28 with HDRI support.
 - Updated to cppcheck 1.83.
 - Some minor optimizations and code cleanup.
 
