--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -127,7 +127,7 @@ ndo
 - Gifsicle 1.91 - http://www.lcdf.org/gifsicle/
 - Gifsicle Lossy 1.91 - https://kornel.ski/lossygif
 - Ghostscript 9.23 - http://www.ghostscript.com
-- GNU Strip 2.29.1 - https://sourceforge.net/projects/mingw-w64/
+- GNU Strip 2.30 - https://sourceforge.net/projects/mingw-w64/
 - Guetzli 1.0.1 - https://github.com/google/guetzli
 - ImageMagick 7.0.7.28 - http://www.imagemagick.org
 - ImageWorsener 1.3.2 - http://entropymine.com/imageworsener
@@ -170,6 +170,7 @@ X.XX - YYYY
 - Updated libwebp to 1.0.0.
 - Updated pingo to 0.96y x86 and x64 versions.
 - Updated ImageMagick to 7.0.7.28 with HDRI support.
+- Updated strip to 2.30.
 - Updated to cppcheck 1.83.
 - Some minor optimizations and code cleanup.
 
