--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -137,7 +137,7 @@ ndo
 - ImageWorsener 1.3.2 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
-- jpegoptim 1.4.5 - http://www.kokkonen.net/tjko/projects.html
+- jpegoptim 1.4.6 - http://www.kokkonen.net/tjko/projects.html
 - jpegtran 9b - http://jpegclub.org/jpegtran/
 - jsmin 2013-03-29 - http://www.crockford.com/javascript/jsmin.html
 - Leanify 0.4.3.214 - https://github.com/JayXon/Leanify (https://ci.appveyor.com/project/JayXon/leanify)
@@ -169,6 +169,7 @@ ndo
 X.XX - YYYY
 - Updated SQLite to 3.23.1 x86 and x64 Visual C++ 2017 custom builds.
 - Updated libwebp to 1.0.0 (Olav R. Birkeland).
+- Updated jpegoptim to 1.4.6 (custom built with libjpeg 9b).
 - Updated to mutool 1.13.
 - Updated pingo to 0.96z4 x86 and x64 versions.
 - Updated Leanify to 0.4.3.214 daily binaries.
