--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -145,7 +145,7 @@ ndo
 - libwebp 1.0.0 - https://storage.googleapis.com/downloads.webmproject.org/releases/webp/index.html
 - m7zRepacker 1.0.32.319 - https://encode.ru/threads/1201-m7zRepacker
 - mkclean 0.8.10 - http://www.matroska.org/downloads/mkclean.html
-- mozjpeg 3.2 - https://github.com/mozilla/mozjpeg
+- mozjpeg 3.3.1 - https://github.com/mozilla/mozjpeg
 - MP3packer 2.04 - http://omion.dyndns.org/mp3packer/mp3packer.html
 - mp4v2 2.1.0 - https://github.com/TechSmith/mp4v2
 - mutool 1.13 - http://mupdf.com/downloads/
@@ -167,6 +167,7 @@ ndo
 
 
 X.XX - YYYY
+- Updated mozjpegtran to 3.3.1 x86 and x64 binaries (Olav R. Birkeland).
 - Updated SQLite to 3.23.1 x86 and x64 Visual C++ 2017 custom builds.
 - Updated libwebp to 1.0.0 (Olav R. Birkeland).
 - Updated jpegoptim to 1.4.6 (custom built with libjpeg 9b).
