--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -174,6 +174,8 @@ X.XX - YYYY
 - Updated to mutool 1.13.
 - Updated pingo to 0.96z6 x86 and x64 versions.
 - Updated Leanify to 0.4.3.214 daily binaries.
+- Upgraded distributions to 7-Zip 18.05.
+- Better performance updating to ASMLib 2.52 with AVX512 support.
 - Some minor optimizations and code cleanup.
 
 
